--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>co.andres.alzate.app.main.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
