changes in path and log

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,10 +16,10 @@ log4j.appender.RollingAppenderU.layout.ConversionPattern=[%p] %d %c %M - %m%n
 
 
 # By default, everything goes to console and file
-log4j.rootLogger=DEBUG, RollingAppender, myConsoleAppender
+log4j.rootLogger=DEBUG, myConsoleAppender
 
 # My custom logging goes to another file
-log4j.logger.myLogger=DEBUG, RollingAppenderU
+log4j.logger.myLogger=DEBUG
 
 # The noisier spark logs go to file only
 log4j.logger.spark.storage=INFO, RollingAppender
