--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,24 +2,24 @@ log4j.appender.myConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.myConsoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.myConsoleAppender.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-#log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.RollingAppender.File=/app/log/spark.log
-#log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
-#log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
-#log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
-#
-#log4j.appender.RollingAppenderU=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.RollingAppenderU.File=/app/logs/sparkU.log
-#log4j.appender.RollingAppenderU.DatePattern='.'yyyy-MM-dd
-#log4j.appender.RollingAppenderU.layout=org.apache.log4j.PatternLayout
-#log4j.appender.RollingAppenderU.layout.ConversionPattern=[%p] %d %c %M - %m%n
+log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RollingAppender.File=/app/log/spark.log
+log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c %M - %m%n
+
+log4j.appender.RollingAppenderU=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RollingAppenderU.File=/app/logs/sparkU.log
+log4j.appender.RollingAppenderU.DatePattern='.'yyyy-MM-dd
+log4j.appender.RollingAppenderU.layout=org.apache.log4j.PatternLayout
+log4j.appender.RollingAppenderU.layout.ConversionPattern=[%p] %d %c %M - %m%n
 
 
 # By default, everything goes to console and file
-log4j.rootLogger=INFO, myConsoleAppender
+log4j.rootLogger=INFO, RollingAppender, myConsoleAppender
 
 # My custom logging goes to another file
-log4j.logger.myLogger=INFO
+log4j.logger.myLogger=INFO, RollingAppenderU
 
 # The noisier spark logs go to file only
 #log4j.logger.spark.storage=INFO, RollingAppender
