--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,16 @@
             <artifactId>spark-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
 
